--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,6 +36,28 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
+      # Docker build & Push
+    - name: Docker build & push to Docker hub
+      run: |
+        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/docker-test .
+        docker push ${{ secrets.DOCKER_USERNAME }}/docker-test
+
+      # EC2 배포
+    - name: Docker image pull & Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }} # EC2 인스턴스 퍼블릭 DNS
+        username: ec2-user
+        key: ${{ secrets.KEY }} # pem 키
+        # 도커 작업
+        script: |
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/docker-test:latest
+          sudo docker stop $(sudo docker ps -a -q)
+          sudo docker run -d --log-driver=syslog -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/docker-test:latest
+          sudo docker rm $(sudo docker ps --filter 'status=exited' -a -q)
+          sudo docker image prune -a -f
+
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
     #
