--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,8 +40,8 @@ jobs:
     - name: Docker build & push to Docker hub
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/docker-test .
-        docker push ${{ secrets.DOCKER_USERNAME }}/docker-test
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/exaple-docker .
+        docker push ${{ secrets.DOCKER_USERNAME }}/exaple-docker
 
       # EC2 배포
     - name: Docker image pull & Deploy to EC2
@@ -52,9 +52,9 @@ jobs:
         key: ${{ secrets.KEY }} # pem 키
         # 도커 작업
         script: |
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/docker-test:latest
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/exaple-docker:latest
           sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run -d --log-driver=syslog -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/docker-test:latest
+          sudo docker run -d --log-driver=syslog -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/exaple-docker:latest
           sudo docker rm $(sudo docker ps --filter 'status=exited' -a -q)
           sudo docker image prune -a -f
 
